--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">MobileRehab</string>
+    <string name="title_activity_maps">title_activity_maps</string>
 </resources>
