--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,14 @@
 <resources>
     <string name="app_name">MobileRehab</string>
     <string name="title_activity_maps">title_activity_maps</string>
+    <string name="update_profile">Update Profile</string>
+    <string name="add_user">Add User</string>
+    <string name="add_appointment">Add Appointment</string>
+    <string name="view_appointment">View Appointment</string>
+    <string name="fullname">Fullname</string>
+    <string name="address">Address</string>
+    <string name="phone_number">Phone Number</string>
+    <string name="save">SAVE</string>
+    <string name="days_away_from_drugs">Days Away From Drugs</string>
+    <string name="identification_number">Identification Number</string>
 </resources>
