--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="save">SAVE</string>
     <string name="days_away_from_drugs">Days Away From Drugs</string>
     <string name="identification_number">Identification Number</string>
+    <string name="take_barcode_picture">Take Picture</string>
+    <string name="scan_barcode">Scan Barcode</string>
 </resources>
