--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,8 @@
     <string name="appointment">APPOINTMENT</string>
     <string name="appointment_date">Appointment Date</string>
     <string name="appointment_time">Appointment Time</string>
+    <string name="emergency_call">Emergency Call</string>
+    <string name="police">Police</string>
+    <string name="hospital">Hospital</string>
+    <string name="start_scan">start scan</string>
 </resources>
